updated the css and also updated my linkedin url

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <ul>
             <li><a class="btn-pills white" href="mailto:lawrenceikara@gmail.com">Email</a></li>
             <li><a class="btn-pills ">CV</a></li>
-            <li><a class="circle" href="https://linkedin.com/lawrenceikara"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a class="circle" href="https://ng.linkedin.com/in/lawrence-ikara-34aa052a7"><i class="fa-brands fa-linkedin"></i></a></li>
             <li><a class="circle" href="https://x.com/lawrenceikara"><i class="fa-brands fa-twitter"></i></a></li>
             <li><a class="circle" href="https://wa.me/+2347080999139..."><i class="fa-brands fa-whatsapp"></i></a></li>
           </ul>
